<resources>
    <string name="app_name">Michelin Star Restaurants</string>
    <string name="stars">Stars</string>
    <string name="star_1">1 Star</string>
    <string name="star_2">2 Stars</string>
    <string name="star_3">3 Stars</string>
    <string name="star_all">Show all</string>

    <string name="tittle_dialog_rating">Rate the app!</string>
    <string name="rating_description">Do you like this app? \nIt won\'t take you more than a minute. \nThanks for your support</string>
    <string name="yes">Rate now</string>
    <string name="not_now">Remind me later</string>
    <string name="never_more">No, thanks</string>
</resources>