<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:layout_gravity="center"
    android:background="@drawable/radius_corner">



    <TextView
        android:id="@+id/txtTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tittle_dialog_rating"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivExit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:src="@drawable/exit_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTittle"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:text="@string/rating_description"
        android:textSize="16sp"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDescription"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@drawable/style_buttons"
            android:text="@string/yes"
            android:layout_gravity="center_vertical"/>

        <Space
            android:layout_width="3dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnNotNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@drawable/style_buttons"
            android:text="@string/not_now"
            android:paddingStart="1dp"
            android:paddingEnd="1dp"
            android:layout_gravity="center_vertical"/>

        <Space
            android:layout_width="3dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnNeverMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@drawable/style_buttons"
            android:text="@string/never_more"
            android:paddingStart="1dp"
            android:paddingEnd="1dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>